form save and get into database

--- a/blog/templates/blog/post_new.html
+++ b/blog/templates/blog/post_new.html
@@ -1,5 +1,6 @@
 <h1>New Post</h1>
-    <form action="/" method="POST" >{% csrf_token %}
+    <form action="/post/new/" method="POST" >{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" value="Submit">Save</button>
     </form>
+
